RESOLVED FIXED198035
Fix 32-bit bytecode cache crashes
https://bugs.webkit.org/show_bug.cgi?id=198035
Summary Fix 32-bit bytecode cache crashes
Tadeu Zagallo
Reported 2019-05-20 02:29:32 PDT
...
Attachments
Patch (4.36 KB, patch)
2019-05-20 02:35 PDT, Tadeu Zagallo
no flags
Tadeu Zagallo
Comment 1 2019-05-20 02:35:11 PDT
Tadeu Zagallo
Comment 2 2019-05-20 02:40:25 PDT
Michael Saboff
Comment 3 2019-05-20 16:26:33 PDT
Comment on attachment 370247 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-05-20 23:31:12 PDT
Comment on attachment 370247 [details] Patch Clearing flags on attachment: 370247 Committed r245563: <https://trac.webkit.org/changeset/245563>
WebKit Commit Bot
Comment 5 2019-05-20 23:31:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.